2025-05-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* Use C++17 features for templates.

2025-05-11  Sam Varshavchik  <mrsam@courier-mta.com>

	* ABI break. Update the C++ API to C++17. Several functions'
	std::u32string parameter replaced with a std::u32string_view,
	where possible. Fill in a small functional gap, implement
	unicode::totitle().

2.3.2

2025-04-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix warning messages from recent versions of gcc

2024-09-07  Sam Varshavchik  <mrsam@courier-mta.com>

	* deb packaging fixes.

2.3.1

2024-08-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier-debuild: implement DEBGCC=default, to help with pbuilder.

2.3.0

2023-12-18  Sam Varshavchik  <mrsam@courier-mta.com>

	* Unicode 15 update. Added unicode_derived_<name>() lookup for
	derived core properties. Added unicode_general_category_lookup()
	for general category lookups. Fix GB11 rule.

2.2.6

2022-12-02  Sam Varshavchik  <mrsam@courier-mta.com>

	* Debian/Ubuntu: update lintian overrides

2.2.5

2022-11-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* Adjust deb packaging. Check /etc/lsb-release and include the
	distribution release in the deb package version, to faciliate
	updating to the same version of the package in an updated release.

2.2.4

2022-05-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* configure.ac: gcc 12, autotool updates.

2022-03-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* Add scripts to create installable .deb packages, update
	documentation.

2.2.3

2021-03-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* Fix compilation error on CentOS 7.

2.2.2

2021-03-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode_bidi.c: Implement unicode_bidi_combining(). Implement
	canonical and compatibility decomposition and canonical composition.

2021-03-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* unicode_bidi.c (unicode_bidi_needs_embed): Make its return code
	what its documentation says its return code is.
